Bug: Fix Get Started button on Solar Champion Program page. - Updated CSS to fix the button on IE and Firefox browser.

--- a/revolv/static/css/screen.css
+++ b/revolv/static/css/screen.css
@@ -15375,22 +15375,17 @@ span.setting-donation-change {
     /*}*/
 }
 
+#project > div.cms-content-row.row.after-header > div > div:nth-child(12) > p {
+    text-align: center;
+}
+
 #project > div.cms-content-row.row.after-header > div > div:nth-child(12) > p > a {
-    margin: 5vmin 47% 0 23%;
-    padding: 2vmin 2vmin 2vmin 2vmin;
+    padding: 0.7em;
     background-color: rgb(20, 177, 231);
     color: #fff;
     border-radius: 3px;
-    width: 100%;
-    text-align: center;
-    line-height: normal;
     cursor: pointer;
     font-weight: bold;
-}
-@media only screen and (max-width: 767px) {
-    #project > div.cms-content-row.row.after-header > div > div:nth-child(12) > p > a {
-    	margin-left: 9vw;
-	}
 }
 #project > div.video-row > div:nth-child(5) > a {
     font-size: 1.5em;
